# test

camerax-tflite/app/: CMakeLists.txt  build.gradle
camerax-tflite/app/src/main/: AndroidManifest.xml
camerax-tflite/app/src/main/cpp/: conv_sdk.cpp  conv_sdk.hpp
